--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="message_main_page">Selamat Belajar di Dicoding.</string>
     <string name="greeting">Halo %1$s,</string>
     <string name="logout">Keluar</string>
+    <string name="error_email">Email Anda Tidak Valid</string>
+    <string name="error_password">Password tidak boleh kurang dari 8 karakter</string>
 
 </resources>
