--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="error_password">Password tidak boleh kurang dari 8 karakter</string>
     <string name="account_created_message">Akun dengan %1$s sudah jadi nih. Yuk, login dan belajar coding.</string>
     <string name="account_failed_message">Registrasi Akun Anda Gagal</string>
+    <string name="account_login_success">Anda berhasil login. Sudah tidak sabar untuk belajar ya?</string>
     <string name="next">Selanjutnya</string>
     <string name="yeah">Yeah!</string>
     <string name="nay">Oh No</string>
