--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">LoginWithAnimation</string>
+    <string name="app_name">Dicoding Story</string>
     <string name="signup">Daftar</string>
     <string name="login">Masuk</string>
     <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
@@ -17,7 +17,7 @@
     <string name="error_password">Password tidak boleh kurang dari 8 karakter</string>
     <string name="account_created_message">Akun dengan %1$s sudah jadi nih. Yuk, login dan belajar coding.</string>
     <string name="account_failed_message">Registrasi Akun Anda Gagal</string>
-    <string name="account_login_success">Anda berhasil login. Sudah tidak sabar untuk belajar ya?</string>
+    <string name="account_login_success">Anda berhasil login %1$s. Sudah tidak sabar untuk belajar ya?</string>
     <string name="next">Selanjutnya</string>
     <string name="yeah">Yeah!</string>
     <string name="nay">Oh No</string>
